# rwEEPROM

./: Makefile.am  README.md  configure.ac  init_eeprom.hpp  meson.build  updatevpd.sh  vpddata.json  wEE.cpp  wEE.hpp
example/: wEE.json
service/: write-eeprom.service
